@@ -1,22 +1,23 @@
 package com.gpse.sesam.configuration;
 
 import com.fasterxml.jackson.core.JsonProcessingException;
+import com.gpse.sesam.domain.colors.ColorTheme;
 import com.gpse.sesam.domain.colors.Colors;
 import com.gpse.sesam.domain.colors.ColorsService;
 import com.gpse.sesam.domain.credential.category.Category;
 import com.gpse.sesam.domain.credential.category.CategoryService;
-import com.gpse.sesam.domain.credential.credentials.Credential;
-import com.gpse.sesam.domain.credential.credentials.CredentialService;
-import com.gpse.sesam.domain.credential.credentials.CredentialServiceImpl;
-import com.gpse.sesam.domain.credential.credentials.ExternalCredential;
-import com.gpse.sesam.domain.credential.issuing.ChecklistEntry;
-import com.gpse.sesam.domain.credential.issuing.FormEntry;
-import com.gpse.sesam.domain.credential.issuing.FormEntryType;
+import com.gpse.sesam.domain.credential.credentials.internal.InternalCredential;
+import com.gpse.sesam.domain.credential.credentials.internal.CredentialService;
+import com.gpse.sesam.domain.credential.credentials.external.ExternalCredential;
+import com.gpse.sesam.domain.credential.issue.issuing.ChecklistEntry;
+import com.gpse.sesam.domain.credential.issue.issuing.FormEntry;
+import com.gpse.sesam.domain.credential.issue.issuing.FormEntryType;
+import com.gpse.sesam.domain.credential.issue.validation.*;
 import com.gpse.sesam.domain.location.Coordinate;
 import com.gpse.sesam.domain.location.Location;
 import com.gpse.sesam.domain.location.LocationService;
-import com.gpse.sesam.domain.location.RoomGroupService;
-import com.gpse.sesam.domain.location.RoomGroups;
+import com.gpse.sesam.domain.location.roomgroup.RoomGroupService;
+import com.gpse.sesam.domain.location.roomgroup.RoomGroups;
 import com.gpse.sesam.domain.location.building.Building;
 import com.gpse.sesam.domain.location.door.Door;
 import com.gpse.sesam.domain.location.floor.Floor;
@@ -26,7 +27,6 @@ import com.gpse.sesam.domain.user.SesamUserRole;
 import com.gpse.sesam.domain.user.SesamUserService;
 import com.gpse.sesam.domain.user.issuer.Issuer;
 import com.gpse.sesam.util.GeoJsonParser;
-import com.gpse.sesam.web.cmd.CredentialCmd;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 import org.springframework.beans.factory.InitializingBean;
@@ -38,9 +38,7 @@ import java.io.IOException;
 import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.nio.file.Paths;
-import java.util.ArrayList;
-import java.util.Collections;
-import java.util.List;
+import java.util.*;
 
 @Service
 @Profile("test")
@@ -78,7 +76,7 @@ public class InitializeDatabaseLocal implements InitializingBean {
 	@Override
 	public void afterPropertiesSet() {
 		final List<Location> locations = createLocations();
-		final List<Credential> credentials = createCredentials();
+		final List<InternalCredential> credentials = createCredentials();
 		final List<SesamUser> users = createUsers(credentials);
 		final List<Category> categories = createCredentialCategories();
 		final List<Colors> colors = createColors();
@@ -94,36 +92,68 @@ public class InitializeDatabaseLocal implements InitializingBean {
 	}
 
 	private List<Colors> createColors() {
-		final Colors defaultColors = new Colors();
-		defaultColors.setDefaultColors(true);
-		setColors(defaultColors);
+		final Colors defaultLight = new Colors();
+		defaultLight.setDefaultColors(true);
+		defaultLight.setTheme(ColorTheme.LIGHT);
+		setLightColors(defaultLight);
+		defaultLight.setLogoPath("T_logo_white.svg");
 
-		final Colors currentColors = new Colors();
-		currentColors.setDefaultColors(false);
-		setColors(currentColors);
+		final Colors defaultDark = new Colors();
+		defaultDark.setDefaultColors(true);
+		defaultDark.setTheme(ColorTheme.DARK);
+		setDarkColors(defaultDark);
+		defaultDark.setLogoPath("T_logo_black.svg");
+
+		final Colors currentLight = new Colors();
+		currentLight.setDefaultColors(false);
+		currentLight.setTheme(ColorTheme.LIGHT);
+		setLightColors(currentLight);
+
+		final Colors currentDark = new Colors();
+		currentDark.setDefaultColors(false);
+		currentDark.setTheme(ColorTheme.DARK);
+		setDarkColors(currentDark);
 
 		final List<Colors> colors = new ArrayList<>();
-		colors.add(defaultColors);
-		colors.add(currentColors);
+		colors.add(defaultLight);
+		colors.add(defaultDark);
+		colors.add(currentLight);
+		colors.add(currentDark);
 
 		return colors;
 	}
 
-	private void setColors(final Colors defaultColors) {
+	private void setLightColors(final Colors defaultColors) {
+		defaultColors.setLogoPath("/Logo.svg");
 		defaultColors.setBgC("#ffffff");
 		defaultColors.setTextC("#000000");
 		defaultColors.setPrimaryColor("#e20074");
 		defaultColors.setSecondary("#f6b2d5");
 		defaultColors.setAccent("#ffffff");
 		defaultColors.setDark("#808080");
-		defaultColors.setLightBlue("#7d99a7");
+		defaultColors.setLight("#9e9e9e");
 		defaultColors.setPositive("#dcdcdc");
 		defaultColors.setNegative("#505050");
 		defaultColors.setInfo("#0074E2");
 		defaultColors.setWarning("#fec705");
 	}
 
-	private List<SesamUser> createUsers(final List<Credential> credentials) {
+	private void setDarkColors(final Colors defaultColors) {
+		defaultColors.setLogoPath("/Logo-Dark.svg");
+		defaultColors.setBgC("#303030");
+		defaultColors.setTextC("#ffffff");
+		defaultColors.setPrimaryColor("#e20074");
+		defaultColors.setSecondary("#f6b2d5");
+		defaultColors.setAccent("#000000");
+		defaultColors.setDark("#808080");
+		defaultColors.setLight("#9e9e9e");
+		defaultColors.setPositive("#dcdcdc");
+		defaultColors.setNegative("#505050");
+		defaultColors.setInfo("#0074E2");
+		defaultColors.setWarning("#fec705");
+	}
+
+	private List<SesamUser> createUsers(final List<InternalCredential> credentials) {
 		final SesamUserRole adminRole = new SesamUserRole(SesamUserRole.AttainableRole.ADMINISTRATOR);
 		adminRole.setGranted(true);
 		final SesamUserRole issuerRole = new SesamUserRole(SesamUserRole.AttainableRole.ISSUER);
@@ -132,16 +162,16 @@ public class InitializeDatabaseLocal implements InitializingBean {
 		editorRole.setGranted(true);
 		final String defaultPassword = passwordEncoder.encode("Hallo123!");
 		final SesamUser admin = new SesamUser("admin@test.de", defaultPassword, "Admin", "User",
-				Collections.singletonList(adminRole));
+				List.of(adminRole));
 		final Issuer issuer = new Issuer("issuer@test.de", defaultPassword, "Issuer", "User",
-				Collections.singletonList(issuerRole), new Room("0.007"));
+				List.of(issuerRole), new Room("0.007"));
 		issuer.setCredentials(credentials);
 		final SesamUser editor = new SesamUser("editor@test.de", defaultPassword, "Editor", "User",
-				Collections.singletonList(editorRole));
+				List.of(editorRole));
 		final SesamUser user = new SesamUser("user@test.de", defaultPassword, "Test", "User",
 				Collections.emptyList());
 
-		for (final Credential cred : credentials) {
+		for (final InternalCredential cred : credentials) {
 			cred.getIssuer().add(issuer);
 		}
 
@@ -150,8 +180,8 @@ public class InitializeDatabaseLocal implements InitializingBean {
 		final SesamUserRole editorRole21 = new SesamUserRole(SesamUserRole.AttainableRole.EDITOR);
 		editorRole21.setGranted(true);
 
-		final SesamUser jana = new SesamUser("jana@test.de", defaultPassword, "Jana", "Editor-Issuer",
-				List.of(editorRole21, issuerRole20));
+		final SesamUser jana = new Issuer("jana@test.de", defaultPassword, "Jana", "Editor-Issuer",
+				List.of(editorRole21, issuerRole20), null);
 
 
 		return List.of(admin, issuer, editor, user, jana);
@@ -196,16 +226,16 @@ public class InitializeDatabaseLocal implements InitializingBean {
 		// breaks jar build from mater
 //		final String jsonContent = readJsonFile();
 //		final List<List<Coordinate>> roomCoordinates = createRoomCoordinates(jsonContent);
-
+//
 //		for (int i = 0; i < roomCoordinates.size(); i++) {
 //			rooms.get(i).setCoordinates(roomCoordinates.get(i));
 //		}
-
+//
 //		final List<List<Coordinate>> doorCoordinates = createDoorCoordinates(jsonContent);
-
+//
 //		for (int i = 0; i < doorCoordinates.size(); i++) {
 //			final Door door = new Door("door" + i, doorCoordinates.get(i));
-//			rooms.get(i).setDoors(Collections.singletonList(door));
+//			rooms.get(i).setDoors(List.of(door));
 //		}
 
 		final List<Floor> floors = new ArrayList<>();
@@ -246,17 +276,59 @@ public class InitializeDatabaseLocal implements InitializingBean {
 
 	private List<FormEntry> form() {
 		final List<FormEntry> form = new ArrayList<>();
-		final FormEntry id = new FormEntry("ID", FormEntryType.NUMBER, "id");
-		final FormEntry firstName = new FormEntry("Vorname", FormEntryType.TEXT, "first_name");
-		final FormEntry lastName = new FormEntry("Nachname", FormEntryType.TEXT, "last_name");
-		final FormEntry birthDate = new FormEntry("Geburtstagsdatum", FormEntryType.DATE, "birth_date");
-		final FormEntry date = new FormEntry("Ablaufdatum", FormEntryType.DATE, "expiration_date");
+		final FormEntry id = new FormEntry("ID", FormEntryType.NUMBER, "id", getIdValidationRules());
+		final FormEntry firstName = new FormEntry(
+				"Vorname", FormEntryType.TEXT, "first_name", getFirstNameValidationRules());
+		final FormEntry lastName = new FormEntry(
+				"Nachname", FormEntryType.TEXT, "last_name", getLastNameValidationRules());
+		final FormEntry birthDate = new FormEntry(
+				"Geburtstagsdatum", FormEntryType.DATE, "birth_date", getBirthDateValidationRules());
+		final FormEntry date = new FormEntry(
+				"Ablaufdatum", FormEntryType.DATE, "expiration_date", getDateValidationRules());
 		form.add(id);
 		form.add(firstName);
 		form.add(lastName);
 		form.add(birthDate);
 		form.add(date);
 		return form;
+	}
+
+	private List<AbstractValidationRule> getIdValidationRules() {
+		final List<AbstractValidationRule> validationRules = new ArrayList<>();
+		validationRules.add(new ComparisonRule(ComparisonType.GREATER_EQUAL, "0"));
+		return validationRules;
+	}
+
+	private List<AbstractValidationRule> getFirstNameValidationRules() {
+		final List<AbstractValidationRule> validationRules = new ArrayList<>();
+		validationRules.add(new RegExRule(
+				"^[a-zA-ZàáâäãåąčćęèéêëėįìíîïłńòóôöõøùúûüųūÿýżźñçčšžÀÁÂÄÃÅ"
+						+ "ĄĆČĖĘÈÉÊËÌÍÎÏĮŁŃÒÓÔÖÕØÙÚÛÜŲŪŸÝŻŹÑßÇŒÆČŠŽ∂ð ,.'-]+$",
+				"Wähle eine realen Name / Choose a real name"));
+		validationRules.add(new LengthRule(ComparisonType.LESS_THAN, 50));
+		return validationRules;
+	}
+
+	private List<AbstractValidationRule> getLastNameValidationRules() {
+		final List<AbstractValidationRule> validationRules = new ArrayList<>();
+		validationRules.add(new RegExRule(
+				"^[a-zA-ZàáâäãåąčćęèéêëėįìíîïłńòóôöõøùúûüųūÿýżźñçčšžÀÁÂÄÃÅ"
+						+ "ĄĆČĖĘÈÉÊËÌÍÎÏĮŁŃÒÓÔÖÕØÙÚÛÜŲŪŸÝŻŹÑßÇŒÆČŠŽ∂ð ,.'-]+$",
+				"Wähle eine realen Name / Choose a real name"));
+		validationRules.add(new LengthRule(ComparisonType.LESS_THAN, 50));
+		return validationRules;
+	}
+
+	private List<AbstractValidationRule> getBirthDateValidationRules() {
+		final List<AbstractValidationRule> validationRules = new ArrayList<>();
+		validationRules.add(new ComparisonRule(ComparisonType.LESS_THAN, true, "Ablaufdatum"));
+		return validationRules;
+	}
+
+	private List<AbstractValidationRule> getDateValidationRules() {
+		final List<AbstractValidationRule> validationRules = new ArrayList<>();
+		validationRules.add(new ComparisonRule(ComparisonType.GREATER_THAN, true, "Geburtstagsdatum"));
+		return validationRules;
 	}
 
 	private List<ChecklistEntry> checklist() {
@@ -266,7 +338,7 @@ public class InitializeDatabaseLocal implements InitializingBean {
 		return checklist;
 	}
 
-	private List<Credential> createCredentials() {
+	private List<InternalCredential> createCredentials() {
 		// Checklist
 		final List<ChecklistEntry> checklist = checklist();
 
@@ -297,32 +369,26 @@ public class InitializeDatabaseLocal implements InitializingBean {
 		final String defaultPassword = passwordEncoder.encode("Hallo123!");
 		final List<Issuer> issuers = new ArrayList<>();
 		final Issuer issuer1 = new Issuer("peters@test.com", defaultPassword, "Gerda", "Peters",
-				Collections.singletonList(issuerRole10), room);
+				List.of(issuerRole10), room);
 
 		final Issuer issuer2 = new Issuer("muster@test.com", defaultPassword, "Erik", "Muster",
-				Collections.singletonList(issuerRole11), room2);
+				List.of(issuerRole11), room2);
 
 		issuers.add(issuer1);
 		issuers.add(issuer2);
 
-		// Safety-Credential
-		final List<Credential> credentials = new ArrayList<>();
-		final Credential safety = new Credential("Sicherheitsbelehrung-Uni", "$U-MEMBER",
-				"university", form, checklist);
-		safety.addIssuer(issuer1);
-		safety.addIssuer(issuer2);
-
 		final List<ChecklistEntry> checklist3 = checklist();
 
 		final List<FormEntry> form3 = form();  //Form
-		final Credential safety2 = new Credential("Sicherheitsbelehrung-FH", "$T-MEMBER",
+		final InternalCredential safety2 = new InternalCredential("Sicherheitsbelehrung-FH", "$T-TRAINING",
 				"tlabs", form3, checklist3);
 		safety2.addIssuer(issuer1);
 		safety2.addIssuer(issuer2);
-		credentials.add(safety);
-		credentials.add(safety2);
+		issuer1.setCredentials(List.of(safety2));
+		issuer2.setCredentials(List.of(safety2));
 
-		return credentials;
+
+		return List.of(safety2);
 	}
 
 	private List<Category> createCredentialCategories() {
@@ -343,17 +409,17 @@ public class InitializeDatabaseLocal implements InitializingBean {
 
 		final List<Issuer> issuers = new ArrayList<>();
 		final Issuer issuer1 = new Issuer("mann@test.com", "Hallo123!", "Elfriede", "Mann",
-				Collections.singletonList(issuerRole10), room);
+				List.of(issuerRole10), room);
 
 		final Issuer issuer2 = new Issuer("hombach@test.com", "Hallo123!", "Johann",
-				"Hombach", Collections.singletonList(issuerRole11), room2);
+				"Hombach", List.of(issuerRole11), room2);
 		issuers.add(issuer1);
 		issuers.add(issuer2);
 
 
 		// Safety-Credential
-		final List<Credential> credentials = new ArrayList<>();
-		final Credential safety = new Credential(
+		final List<InternalCredential> credentials = new ArrayList<>();
+		final InternalCredential safety = new InternalCredential(
 				"Sicherheitsbelehrung-Baumschule",
 				"$T-MEMBER",
 				"tlabs",
@@ -363,8 +429,9 @@ public class InitializeDatabaseLocal implements InitializingBean {
 		safety.addIssuer(issuer1);
 		safety.addIssuer(issuer2);
 		credentials.add(safety);
+		final List<FormEntry> form7 = form();
 		final List<ExternalCredential> externalCredentials = new ArrayList<>();
-		final ExternalCredential safety3 = new ExternalCredential("Sicherheitsbelehrung-Telekom", "$T-MEMBER");
+		final ExternalCredential safety3 = new ExternalCredential("Sicherheitsbelehrung-Telekom", "$T-TRAINING", form7);
 
 		externalCredentials.add(safety3);
 
@@ -378,8 +445,8 @@ public class InitializeDatabaseLocal implements InitializingBean {
 		//Form
 		final List<FormEntry> form6 = form();
 
-		final List<Credential> credentials2 = new ArrayList<>();
-		final Credential firstAid = new Credential(
+		final List<InternalCredential> credentials2 = new ArrayList<>();
+		final InternalCredential firstAid = new InternalCredential(
 				"Erste-Hilfe-Kurs-DRK",
 				"$U-TRAINING",
 				"university",
@@ -389,9 +456,11 @@ public class InitializeDatabaseLocal implements InitializingBean {
 		firstAid.addIssuer(issuer2);
 		credentials2.add(firstAid);
 
+		final List<FormEntry> form8 = form();
+		final List<FormEntry> form9 = form();
 		final List<ExternalCredential> externalCredentials2 = new ArrayList<>();
-		final ExternalCredential firstAid2 = new ExternalCredential("Erste-Hilfe-Kurs-Telekom", "$U-TRAINING");
-		final ExternalCredential firstAid3 = new ExternalCredential("Erste-Hilfe-Kurs-Johanniter", "$U-MEMBER");
+		final ExternalCredential firstAid2 = new ExternalCredential("Erste-Hilfe-Kurs-Telekom", "$U-TRAINING", form8);
+		final ExternalCredential firstAid3 = new ExternalCredential("Erste-Hilfe-Kurs-Johanniter", "$U-MEMBER", form9);
 
 		externalCredentials2.add(firstAid2);
 		externalCredentials2.add(firstAid3);
@@ -399,7 +468,6 @@ public class InitializeDatabaseLocal implements InitializingBean {
 		//Rooms with Credentials
 
 		final Door door3 = new Door("Tor120", null);
-		door3.addCredential(safety);
 
 		final List<Door> doors3 = new ArrayList<>();
 
@@ -431,7 +499,6 @@ public class InitializeDatabaseLocal implements InitializingBean {
 		location.addBuilding(building3);
 
 		final Door door4 = new Door("Tor1506", null);
-		door4.addCredential(firstAid);
 
 		final List<Door> doors4 = new ArrayList<>();
 
@@ -473,11 +540,6 @@ public class InitializeDatabaseLocal implements InitializingBean {
 		category2.addCredential(firstAid);
 		category2.addExternalCredential(firstAid2);
 		category2.addExternalCredential(firstAid3);
-		final CredentialCmd credentialCmd = CredentialServiceImpl.createCredentialCmd(category, safety);
-		final CredentialCmd credentialCmd2 = CredentialServiceImpl.createCredentialCmd(category2, firstAid);
-		final List<CredentialCmd> credentialCmds = new ArrayList<>();
-		credentialCmds.add(credentialCmd);
-		credentialCmds.add(credentialCmd2);
 		categories.add(category);
 		categories.add(category2);
 
